updated app to be more user friendly-got rid of all scrolling boxes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h2 class="results-txt hidden">Have you seen me?</h2>
       </div>
-      <div class="results-container hidden">
+      <div class="results-container hidden" role="main">
         <ul id="results-list" class="results hidden"></ul>
 
         <section id="resources-list">
@@ -238,13 +238,12 @@
               ><br />
               <span style="line-height: 1.6;">1-800-786-2929</span>
             </p>
+            <!-- FOOTER -->
+            <footer id="new-search-msg"></footer>
           </div>
         </section>
       </div>
     </div>
-
-    <!-- FOOTER -->
-    <footer id="new-search-msg"></footer>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.js"
