fixed layout issues

--- a/index.html
+++ b/index.html
@@ -110,13 +110,17 @@
             </p>
 
             <ul>
-              <li>Two recent photos</li>
-              <li>Name</li>
-              <li>Hometown, plus state</li>
-              <li>Height, weight, age</li>
-              <li>Vehicle license plate number and photo of car</li>
-              <li>Place last seen at</li>
-              <li>Phone number of police station or investigator</li>
+              <li class="resources_li">Two recent photos</li>
+              <li class="resources_li">Name</li>
+              <li class="resources_li">Hometown, plus state</li>
+              <li class="resources_li">Height, weight, age</li>
+              <li class="resources_li">
+                Vehicle license plate number and photo of car
+              </li>
+              <li class="resources_li">Place last seen at</li>
+              <li class="resources_li">
+                Phone number of police station or investigator
+              </li>
             </ul>
 
             <h3>Check Out Social Media or Create a Website</h3>
@@ -129,7 +133,7 @@
             </p>
 
             <ul>
-              <li>
+              <li class="resources_li">
                 For a website, use a heading like &ldquo;Find John Doe&rdquo; or
                 &ldquo;Missing Jane Smith.&rdquo; This will help bring up your
                 page on a Google search. Names like
@@ -137,13 +141,13 @@
                 &ldquo;MissingMySonJohn&rdquo; will also get the message across,
                 but may not be included in as many search results.
               </li>
-              <li>
+              <li class="resources_li">
                 Post a recent picture and specific information about your loved
                 one including clothing last seen wearing, physical description,
                 age and information about glasses, tattoos etc. Where they were
                 last seen and where they like to hang out.
               </li>
-              <li>
+              <li class="resources_li">
                 Upload your missing person poster as a PDF so it can easily be
                 shared and printed out.
               </li>
@@ -157,11 +161,11 @@
                 Add a story about your loved one and additional pictures that
                 are compelling and easy for others to relate to.
               </li>
-              <li>
+              <li class="resources_li">
                 Upload a video to YouTube or Facebook of yourself and make a
                 video appeal.
               </li>
-              <li>
+              <li class="resources_li">
                 Ask for people to contact the police department handling the
                 investigation.&nbsp;&nbsp;
               </li>
@@ -236,7 +240,7 @@
                 target="_blank"
                 >www.1800runaway.org</a
               ><br />
-              <span style="line-height: 1.6;">1-800-786-2929</span>
+              <span>1-800-786-2929</span>
             </p>
             <!-- FOOTER -->
             <footer id="new-search-msg"></footer>
