--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
         <ul id="results-list" class="results hidden"></ul>
 
         <section id="resources-list">
-          <!-- RESOURCES PLACEMENT -->
+          <!-- STATISTICS CHARTS  -->
+          <canvas id="ages" width="400" height="200"></canvas>
+          <canvas id="races" width="400" height="200"></canvas>
+          <canvas id="genders" width="400" height="200"></canvas>
+
+          <!-- RESOURCES -->
           <h2 class="title">What to do if your loved one is missing:</h2>
           <div id="resources" class="map-container">
             <h3>Contact the Police Immediately</h3>
@@ -248,7 +253,7 @@
         </section>
       </div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
